--- a/style/index.css
+++ b/style/index.css
@@ -21,14 +21,18 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: -40rem;
+    margin-top: -37rem;
+    line-height: 3;
 }
 
 nav {
-    height: 100px;
-    width: 100%;
     position: fixed;
-    z-index: 2;
+    top: 4rem;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .left-menu,
@@ -119,19 +123,21 @@ section {
     display: inline-block;
     font-family: 'Fascinate Inline', cursive;
     text-transform: uppercase;
-    width: 6em;
+    width: 97%;
     word-break: break-word;
+    animation: 4s;
+    animation-duration: 2s;
 }
 
 /********************/
-.fullscreen-bg {
-    overflow: hidden;
-    z-index: -100;
-    position: relative;
-    height: 100%;
-    width: 100%;
-    padding-top: 45%;
-}
+/*.fullscreen-bg {*/
+/*overflow: hidden;*/
+/*z-index: -100;*/
+/*position: relative;*/
+/*height: 100%;*/
+/*width: 100%;*/
+/*padding-top: 18%;*/
+/*}*/
 
 .fullscreen-bg__video {
     position: absolute;
@@ -165,6 +171,14 @@ section {
     color: #ffffff;
     font-weight: bold;
     margin: 0 auto;
+    -webkit-transition: background 1.5s;
+    -moz-transition: background 1.5s;
+    -o-transition: background 1.5s;
+}
+
+.btn:hover {
+    color: black;
+    background: #dfe149;
 }
 
 .work-btn {
@@ -180,16 +194,243 @@ section {
     text-align: center;
 }
 
-.contacts .container> p {
+.contacts .container > p {
     margin: 2rem;
 }
 
+/*начало слайдера */
+/* Собственно сам слайдер */
+.slider {
+    max-width: 90%;
+    position: relative;
+    margin: auto;
+    height: 300px;
+    margin-bottom: 15px;
+    margin-top: 11rem;
+}
 
+/* Картинка мастабируется по отношению к родительскому элементу */
+.slider .item img {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+/* Кнопки вперед и назад */
+.slider .prev, .slider .next {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+.slider .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* При наведении на кнопки добавляем фон кнопок */
+.slider .prev:hover,
+.slider .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Заголовок слайда */
+.slideText {
+    position: absolute;
+    color: #fff;
+    font-size: 35px;
+    /* Выравнивание текста по горизонтали и по вертикали*/
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* Тень*/
+    text-shadow: 1px 1px 1px #000, 0 0 1em #000;
+}
+
+/* Кружочки */
+.slider-dots {
+    text-align: center;
+}
+
+.slider-dots_item {
+    cursor: pointer;
+    height: 12px;
+    width: 12px;
+    margin: 0 2px;
+    background-color: #ddd;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.slider-dots_item:hover {
+    background-color: #aaa;
+}
+
+/* Анимация слайдов */
+.slider .item {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
+}
+
+/*окончание слайдера*/
+
+/*начало флекс+траннзишн*/
+.flex {
+    display: flex;
+    margin-top: 11rem;
+    overflow: hidden; /*скроем тень*/
+}
+
+.it_em {
+    height: 300px;
+
+    flex: 20%; /* = flex-basis:20%; */
+
+    transition: flex 300ms ease;
+
+    box-shadow: 0 0 19px 3px #000;
+    margin: 1px; /* красивости тени */
+}
+
+.it_em:hover {
+    flex: 0.1 0.1 400px;
+    background-size: 100% 100%;
+}
+
+.img1 {
+    background: url('https://picsum.photos/400/300?image=529') 0 0 no-repeat;
+}
+
+.img2 {
+    background: url('https://picsum.photos/400/300?image=533') 0 0 no-repeat;
+}
+
+.img3 {
+    background: url('https://picsum.photos/400/300?image=534') 0 0 no-repeat;
+}
+
+.img4 {
+    background: url('https://picsum.photos/400/300?image=532') 0 0 no-repeat;
+}
+
+.img5 {
+    background: url('https://picsum.photos/400/300?image=631') 0 0 no-repeat;
+}
+
+/*окончание флекс+транзишн*/
+
+.revealator-slideright {
+    transition: all 6s;
+}
+
+.revealator-slideright {
+    transform: translate(-100px, 0);
+    opacity: 0;
+}
+
+.revealator-slideright.revealator-within,
+.revealator-slideright.revealator-partially-above,
+.revealator-slideright.revealator-above {
+    transform: translate(0, 0);
+    opacity: 1;
+}
+
+.about__h1,
+.work__txt {
+    color: #ffffff;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 3rem;
+    margin-top: -2rem;
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+
+@media only screen and (max-width: 849.98px) {
+    .fullscreen-bg {
+        overflow: hidden;
+        z-index: -100;
+        position: relative;
+        height: 100%;
+        width: 100%;
+        padding-top: 57%;
+    }
+
+    .main {
+        margin-top: -39rem;
+        line-height: 1;
+        margin-bottom: 5rem;
+    }
+
+    .header-h1 {
+        margin-top: 13rem;
+    }
+}
+
+@media only screen and (max-width: 767.98px) {
+    .fullscreen-bg {
+        overflow: hidden;
+        z-index: -100;
+        position: relative;
+        height: 100%;
+        width: 100%;
+        padding-top: 57%;
+    }
+
+    .main {
+        margin-top: -42rem;
+        line-height: 1;
+        margin-bottom: 8rem;
+    }
+
+    .header-h1 {
+        margin-top: 19rem;
+    }
+
+    .text-typing {
+        width: 100%;
+    }
+}
 
 @media only screen and (max-width: 575.98px) {
     .main {
         flex-direction: column;
-        margin-top: -14rem;
+        margin-top: 0rem;
+        line-height: 1.7;
+        margin-bottom: 0rem;
     }
 
     .collaps {
@@ -206,32 +447,16 @@ section {
 
     nav {
         padding: 17px;
-        margin-top: -11rem;
         width: 100%;
-
-    }
-
-    .text-typing {
-        font-size: 3rem;
         text-align: center;
-        padding: 30px 6px;
-        background: -webkit-gradient(linear, left top, right top, from(#4770e0), color-stop(#4fa8c8), to(#fff));
-        background: -o-linear-gradient(left, #4770e0, #4fa8c8, #fff);
-        background: linear-gradient(to right, #4770e0, #4fa8c8, #fff);
-        -webkit-background-clip: text;
-        color: transparent;
-        display: inline-block;
-        font-family: 'Fascinate Inline', cursive;
-        text-transform: uppercase;
-        width: 6em;
-        word-break: break-word;
+
     }
 
     .header-h1 {
         color: #d8d8d8;
         padding: 15px;
         text-align: center;
-        margin-top: 2rem;
+        margin-top: 0rem;
     }
 
     section {
@@ -253,22 +478,18 @@ section {
         color: #ffffff;
     }
 
-    .works__txt2{
+    .works__txt2 {
         text-align: center;
 
     }
 
-    .about__h1,
-    .work__txt {
-        color: #ffffff;
-        text-align: center;
-        margin: 0 auto;
-        padding-bottom: 3rem;
-        margin-top: -2rem;
-        text-transform: uppercase;
-        font-size: 2rem;
+    .fullscreen-bg {
+        display: none;
     }
 
 }
+
+
+
 
 
