--- a/style/index.css
+++ b/style/index.css
@@ -144,6 +144,8 @@ section {
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .first {
@@ -401,27 +403,51 @@ section {
 }
 
 @media only screen and (max-width: 767.98px) {
+    .collaps {
+        width: 100%;
+    }
+
+    .header-h1 {
+        margin-top: 55%;
+    }
+
     .fullscreen-bg {
         overflow: hidden;
         z-index: -100;
         position: relative;
         height: 100%;
         width: 100%;
-        padding-top: 57%;
+        padding-top: 71%;
+        object-fit: cover;
+    }
+
+    .view-bg {
+        background-image: url(../img/milky-way.jpg);
+        z-index: 0;
+        position: relative;
+        padding: 197px 0;
     }
 
     .main {
-        margin-top: -42rem;
+        margin-top: -39rem;
         line-height: 1;
-        margin-bottom: 8rem;
-    }
-
-    .header-h1 {
-        margin-top: 19rem;
+        margin-bottom: 6rem;
     }
 
     .text-typing {
         width: 100%;
+        padding-top: 10%;
+    }
+
+    .first {
+        padding-top: 16rem;
+        padding-bottom: 19rem;
+        color: #ffffff;
+    }
+
+    .about__txt {
+        padding: 10px 15px;
+        line-height: 1.5;
     }
 }
 
@@ -443,6 +469,7 @@ section {
 
     .view-bg {
         background-image: url(../img/bg-mob.jpg);
+        padding: 2px 0;
     }
 
     nav {
@@ -485,6 +512,10 @@ section {
 
     .fullscreen-bg {
         display: none;
+    }
+
+    .text-typing {
+        width: 95%;
     }
 
 }
