--- a/style/index.css
+++ b/style/index.css
@@ -8,9 +8,12 @@ html, body {
 }
 
 .view-bg {
-    background-image: none;
+    /*background-image: none;*/
+    background-image: url(../img/milky-way.jpg);
+    z-index: 0;
+    position: relative;
+    padding: 197px 0;
 }
-
 .container {
     width: 100%;
     margin: 0 auto;
@@ -21,8 +24,8 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: -37rem;
-    line-height: 3;
+    /*margin-top: -37rem;*/
+    /*line-height: 3;*/
 }
 
 nav {
@@ -33,6 +36,7 @@ nav {
     -ms-flex-pack: center;
     justify-content: center;
     width: 100%;
+    margin-left: -9rem;
 }
 
 .left-menu,
@@ -103,6 +107,7 @@ section {
 
 .header-h1 {
     color: #ffffff;
+    font-size: 40px;
     -webkit-animation-timing-function: ease;
     -moz-animation-timing-function: ease;
     -o-animation-timing-function: ease;
@@ -112,7 +117,7 @@ section {
 }
 
 .text-typing {
-    font-size: 3rem;
+    font-size: 5rem;
     text-align: center;
     padding: 30px 6px;
     background: -webkit-gradient(linear, left top, right top, from(#4770e0), color-stop(#4fa8c8), to(#fff));
@@ -124,6 +129,7 @@ section {
     font-family: 'Fascinate Inline', cursive;
     text-transform: uppercase;
     width: 97%;
+    position: relative;
     word-break: break-word;
     animation: 4s;
     animation-duration: 2s;
@@ -152,6 +158,7 @@ section {
     background-image: url("../img/about-bg2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 900px;
 }
 
 .works {
@@ -194,6 +201,7 @@ section {
     background-repeat: no-repeat;
     color: #ffffff;
     text-align: center;
+    padding-top: 17rem;
 }
 
 .contacts .container > p {
@@ -354,7 +362,8 @@ section {
 
 /*окончание флекс+транзишн*/
 
-.revealator-slideright {
+.revealator-slideright,
+.revealator-slideup{
     transition: all 6s;
 }
 
@@ -370,6 +379,17 @@ section {
     opacity: 1;
 }
 
+.revealator-slideup {
+    transform: translate(0, 100px);
+    opacity: 0;
+}
+.revealator-slideup.revealator-within,
+.revealator-slideup.revealator-partially-above,
+.revealator-slideup.revealator-above {
+    transform: translate(0, 0);
+    opacity: 1;
+}
+
 .about__h1,
 .work__txt {
     color: #ffffff;
@@ -378,7 +398,11 @@ section {
     padding-bottom: 3rem;
     margin-top: -2rem;
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 60px;
+}
+
+.first {
+    color: #ffffff;
 }
 
 @media only screen and (max-width: 849.98px) {
@@ -397,18 +421,70 @@ section {
         margin-bottom: 5rem;
     }
 
-    .header-h1 {
-        margin-top: 13rem;
+    .view-bg {
+        /*background-image: url(../img/milky-way.jpg);*/
+        z-index: 0;
+        position: relative;
+        padding: 155px 0;
     }
+
+    .collaps {
+        margin-top: 20%;
+        margin-bottom: -20%;
+    }
+
+    .first {
+        line-height: 2;
+        padding: 14rem 0;
+    }
+
+    .works {
+        padding: 19rem 0;
+    }
+
+    .works__txt2,
+    .works__p,
+    .about__txt{
+        padding: 2rem 5rem;
+        line-height: 2;
+        font-size: 26px;
+    }
+
+    .nav-toggle-p {
+        font-size: 60px;
+    }
+
+    .header-h1 {
+        font-size: 30px;
+        line-height: 1.5;
+    }
+
+    .text-typing {
+        font-size: 60px;
+    }
+
+    /*.about__h1, .work__txt {*/
+        /*font-size: 60px;*/
+    /*}*/
+
+    .btn {
+        padding: 16px 60px;
+    }
+
+    .contacts .container > p {
+        font-size: 22px;
+    }
+
+    nav {
+        margin-left: -5rem;
+    }
+
 }
 
 @media only screen and (max-width: 767.98px) {
     .collaps {
         width: 100%;
-    }
-
-    .header-h1 {
-        margin-top: 55%;
+        margin-top: 20%;
     }
 
     .fullscreen-bg {
@@ -422,10 +498,10 @@ section {
     }
 
     .view-bg {
-        background-image: url(../img/milky-way.jpg);
+        /*background-image: url(../img/milky-way.jpg);*/
         z-index: 0;
         position: relative;
-        padding: 197px 0;
+        padding: 125px 0;
     }
 
     .main {
@@ -440,7 +516,7 @@ section {
     }
 
     .first {
-        padding-top: 16rem;
+        padding-top: 25rem;
         padding-bottom: 19rem;
         color: #ffffff;
     }
@@ -449,6 +525,21 @@ section {
         padding: 10px 15px;
         line-height: 1.5;
     }
+
+    .works {
+        padding: 23rem 0px;
+    }
+
+    .works__txt2,
+    .works__p {
+        padding: 10px 90px;
+        line-height: 1.5;
+    }
+
+    .contacts {
+        padding-top: 25rem;
+    }
+
 }
 
 @media only screen and (max-width: 575.98px) {
@@ -476,6 +567,7 @@ section {
         padding: 17px;
         width: 100%;
         text-align: center;
+        margin-left: 0rem;
 
     }
 
@@ -484,10 +576,11 @@ section {
         padding: 15px;
         text-align: center;
         margin-top: 0rem;
+        font-size: 20px;
     }
 
     section {
-        padding: 17rem 0;
+        padding: 15rem 0;
     }
 
     .about__txt {
@@ -498,6 +591,10 @@ section {
         letter-spacing: 2px;
     }
 
+    .about__h1, .work__txt {
+        font-size: 40px;
+    }
+
     .works__p {
         padding: 10px 82px;
         line-height: 2;
@@ -506,8 +603,17 @@ section {
     }
 
     .works__txt2 {
+        padding: 10px 15px;
+        line-height: 1.5;
         text-align: center;
+    }
 
+    .work-btn {
+        margin-top: 8rem;
+    }
+
+    .btn {
+        padding: 8px 50px;
     }
 
     .fullscreen-bg {
@@ -516,11 +622,20 @@ section {
 
     .text-typing {
         width: 95%;
+        font-size: 42px;
+    }
+
+    .nav-toggle-p {
+        font-size: 42px;
+    }
+
+    .first {
+        padding-top: 17rem;
+        padding-bottom: 7rem;
+        color: #ffffff;
     }
 
 }
-
-
 
 
 
