--- a/style/index.css
+++ b/style/index.css
@@ -345,19 +345,19 @@ section {
 }
 
 .img2 {
-    background: url('https://picsum.photos/400/300?image=533') 0 0 no-repeat;
+    background: url('../img/mscsyheader-banner.png') 0 0 no-repeat;
 }
 
 .img3 {
-    background: url('https://picsum.photos/400/300?image=534') 0 0 no-repeat;
+    background: url('../img/mscsyheader-banner.png') 0 0 no-repeat;
 }
 
 .img4 {
-    background: url('https://picsum.photos/400/300?image=532') 0 0 no-repeat;
+    background: url('../img/mscsyheader-banner.png') 0 0 no-repeat;
 }
 
 .img5 {
-    background: url('https://picsum.photos/400/300?image=631') 0 0 no-repeat;
+    background: url('../img/mscsyheader-banner.png') 0 0 no-repeat;
 }
 
 /*окончание флекс+транзишн*/
